# nxp-vee-mcxn947-frdm

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  Makefile.inc  README.md  SCR-nxpvee-mcxn947-frdm.txt  build.gradle.kts  settings.gradle.kts  west.yml
apps/: .gitignore
apps/aiSample/: README.md  build.gradle.kts
apps/aiSample/configuration/: common.properties
apps/simpleGFX/: README.md  build.gradle.kts
apps/simpleGFX/configuration/: common.properties
bsp/: .project
bsp/projects/common/scripts/: s2s.bat  s2s.sh
bsp/projects/common/sdk_makefile/: Makefile
bsp/projects/common/segger/: SEGGER_SYSVIEW_FreeRTOS.h  SEGGER_debug_def.h  utility_segger.cmake
bsp/projects/microej/: .project  README.rst
bsp/projects/microej/ai/: nxpvee_ai.cmake
bsp/projects/microej/core/: microej_core.cmake
bsp/projects/microej/flash_config/: flash_config.c
bsp/projects/microej/scripts/: Jlink.cmd  build.bat  build.sh  run.bat  run.sh
bsp/projects/microej/security/: microej_security.cmake
bsp/projects/microej/ssl/: microej_ssl.cmake
bsp/projects/microej/ui/: microej_ui.cmake
bsp/projects/nxpvee-ui/app/: main.cpp  tree_version.h
bsp/projects/nxpvee-ui/armgcc/: CMakeLists.txt  MCXN947_cm33_core0_flash.ld  build_all.bat  build_all.sh  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh  clean.bat  clean.sh  config.cmake  flags.cmake
bsp/projects/nxpvee-ui/bsp/: board.c  display_support.c  display_support.h  microej_mbedtls_config.h  pin_mux.c
bsp/projects/nxpvee-ui/sdk_makefile/: Makefile
bsp/vee/port/: README.rst
bsp/vee/scripts/: build.bat  build.sh  clean.bat  clean.sh  run.bat  run.sh  set_project_env.bat  set_project_env.sh  west-commands.yml
bsp/vee/scripts/armgcc/: CMakeLists.txt  CMakePresets.json  MCXN947_cm33_core0_flash.ld  build_all.bat  build_all.sh  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh  clean.bat  clean.sh  config.cmake  flags.cmake
cmake/board/: board.cmake
cmake/flash/: CMakeLists.txt
cmake/modules/: extensions.cmake
gradle/: libs.versions.toml
microej/: CMakeLists.txt  dummy.c
microej/MCXN947-frdm_platform-CM4hardfp_GCC48-1.0.0/: .project
microej/apps/: .project  module.ant  module.ivy
microej/apps/launchers/: SimpleGFX (EMB).launch  SimpleGFX (SIM).launch  apps AiMain.launch
microej/apps/src/main/java/com/microej/partial/support/: PartialRenderPolicy.java  package-info.java
microej/apps/src/main/java/com/nxp/aiSample/: AiMain.java  AiWidget.java  CifarModel.java  CifarTestVectors.java
microej/apps/src/main/java/com/nxp/simpleGFX/: SimpleGFX.java  SimpleGFXWidget.java
microej/apps/src/main/resources/: 5.txt
microej/apps/src/main/resources/com/nxp/ai/: com.nxp.ai.fonts.list  com.nxp.ai.images.list  com.nxp.ai.resources.list
microej/front-panel/: .classpath  .gitignore  .project  CHANGELOG.md  module.ivy
microej/front-panel/src/main/java/com/microej/partial/support/: PartialBufferNatives.java
microej/front-panel/src/main/resources/: platform.fp
microej/mock/: .project
microej/validation/: README.rst
microej/validation/core/java-testsuite-runner-core/: config.properties  module.ant  module.ivy
microej/validation/core/java-testsuite-runner-core/launchers/: java-testsuite-runner-core _AllTestClasses.launch
microej/validation/fs/: README.rst
microej/validation/fs/java-testsuite-runner-fs/: config.properties  config.properties.tpl  module.ant  module.ivy  override.module.ant
microej/validation/gpio/java-testsuite-runner-gpio/: .gitignore  .project  README.md  config.properties  module.ant  module.ivy  override.module.ant
microej/validation/gpio/java-testsuite-runner-gpio/validation/: microej-testsuite-common.properties
microej/validation/net/: README.rst
microej/validation/net/java-testsuite-runner-net/: config.properties  config.properties.tpl  module.ant  module.ivy  override.module.ant
microej/validation/security/java-testsuite-runner-security/: config.properties  config.properties.tpl  module.ivy
microej/validation/ssl/: README.rst
microej/validation/ssl/java-testsuite-runner-ssl/: config.properties  config.properties.tpl  module.ant  module.ivy  override.module.ant
microej/validation/ssl/java-testsuite-runner-ssl/validation/: microej-testsuite-common.properties
microej/vee-port-configuration/: .project  MCXN947.platform  configuration.xml  module.ant  module.ivy  module.properties  override.module.ant
microej/vee-port-configuration/bsp/: bsp.properties
microej/vee-port-configuration/device/: device.properties
microej/vee-port-configuration/display/: display.properties
microej/vee-port-configuration/dropins/scripts/init-partial-buffer/: partial-buffer-init.xml
microej/vee-port-configuration/frontpanel/: frontpanel.properties
microej/vee-port-configuration/fs/: fs.properties
microej/vee-port-configuration/microui/: microui.xml
microej/vee-port-configuration/microui/resources/fonts/: license.txt
microej/vee-port-configuration/net/: net.properties
scripts/west_commands/: run_common.py  zcmake.py
scripts/west_commands/runners/: core.py
vee-port/: build.gradle.kts  configuration.properties
vee-port/dropins/gpio/: gpio.properties
vee-port/extensions/front-panel/: build.gradle.kts
vee-port/extensions/microui/: microui.xml
vee-port/mock/: build.gradle.kts
vee-port/validation/: README.md
vee-port/validation/core/: CHANGELOG.md  README.md  build.gradle.kts  config.properties  config.properties.tpl
vee-port/validation/event-queue/: README.md  build.gradle.kts  config.properties  config.properties.tpl
vee-port/validation/fs/: README.md  build.gradle.kts  config.properties  config.properties.tpl
vee-port/validation/gpio/: CHANGELOG.md  README.md  build.gradle.kts  config.properties  config.properties.tpl
vee-port/validation/net/: README.md  build.gradle.kts  config.properties  config.properties.tpl
vee-port/validation/security/: README.md  build.gradle.kts  config.properties  config.properties.tpl
vee-port/validation/ssl/: README.md  build.gradle.kts  config.properties  config.properties.tpl
(+656 files in other folders)
